--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+    <Button
+            android:text="Terms"
+            android:layout_width="160dp"
+            android:layout_height="80dp" android:id="@+id/btnTerms"
+            android:onClick="toTerms" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="162dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="122dp"/>
+    <Button
+            android:text="Courses"
+            android:layout_width="160dp"
+            android:layout_height="80dp" android:id="@+id/btnCourses"
+            android:onClick="toCourses" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="317dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="122dp"/>
+    <Button
+            android:text="Assesments"
+            android:layout_width="160dp"
+            android:layout_height="80dp" android:id="@+id/btnAssesments"
+            android:onClick="toAssesments"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="480dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="125dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
