--- a/app/src/main/res/layout/activity_courses.xml
+++ b/app/src/main/res/layout/activity_courses.xml
@@ -6,5 +6,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".Courses">
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true" app:srcCompat="@drawable/ic_baseline_add_24" android:id="@+id/floatingActionButton"
+            android:layout_margin="20dp"
+            android:onClick="toAddCourse"
+            tools:layout_editor_absoluteY="659dp"
+            tools:layout_editor_absoluteX="339dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+    />
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/courses_recycler"
+            android:layout_width="409dp"
+            android:layout_height="729dp"
+            android:background="@color/teal_200"
+            tools:layout_editor_absoluteY="1dp"
+            tools:layout_editor_absoluteX="1dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
