--- a/app/src/main/res/layout/activity_terms.xml
+++ b/app/src/main/res/layout/activity_terms.xml
@@ -11,6 +11,7 @@
             android:layout_height="wrap_content"
             android:clickable="true" app:srcCompat="@drawable/ic_baseline_add_24" android:id="@+id/floatingActionButton"
             android:layout_margin="20dp"
+            android:onClick="toAddTerm"
             tools:layout_editor_absoluteY="659dp"
             tools:layout_editor_absoluteX="339dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -20,10 +21,14 @@
             android:layout_width="409dp"
             android:layout_height="653dp"
             tools:layout_editor_absoluteY="1dp"
-            tools:layout_editor_absoluteX="1dp">
+            tools:layout_editor_absoluteX="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent">
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:orientation="vertical">
+                      android:orientation="vertical"
+                      app:layout_constraintBottom_toBottomOf="parent"
+                      app:layout_constraintRight_toRightOf="parent">
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
