--- a/app/src/main/res/layout/activity_terms_details.xml
+++ b/app/src/main/res/layout/activity_terms_details.xml
@@ -62,6 +62,29 @@
                         android:hint="String">
                 </EditText>
             </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                <TextView
+                        android:id="@+id/text_term_courses"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Associated Courses:"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/term_courses_recycler"
+                        android:layout_width="414dp"
+                        android:layout_height="308dp"
+                        android:layout_marginStart="12dp"
+                        android:layout_marginTop="16dp"/>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
