--- a/app/src/main/res/layout/activity_terms_details.xml
+++ b/app/src/main/res/layout/activity_terms_details.xml
@@ -62,6 +62,22 @@
                         android:hint="String">
                 </EditText>
             </LinearLayout>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:text="Add Course:">
+                </TextView>
+                <EditText
+                        android:id="@+id/editTermCourses"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="Course ID">
+                </EditText>
+            </LinearLayout>
+
 
             <LinearLayout
                     android:layout_width="match_parent"
@@ -73,7 +89,6 @@
                         android:layout_height="wrap_content"
                         android:text="Associated Courses:"/>
             </LinearLayout>
-
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -84,6 +99,19 @@
                         android:layout_height="308dp"
                         android:layout_marginStart="12dp"
                         android:layout_marginTop="16dp"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                <Button
+                        android:id="@+id/saveBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="80dp"
+                        android:clickable="true"
+                        android:onClick="saveBtn"
+                        android:text="Save"/>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
