--- a/app/src/main/res/layout/activity_assesments.xml
+++ b/app/src/main/res/layout/activity_assesments.xml
@@ -6,17 +6,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".Assessments">
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true" app:srcCompat="@drawable/ic_baseline_add_24" android:id="@+id/floatingActionButton"
-            android:layout_margin="20dp"
-            android:onClick="toAddAssessment"
-            tools:layout_editor_absoluteY="659dp"
-            tools:layout_editor_absoluteX="339dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-    />
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:clickable="true" app:srcCompat="@drawable/ic_baseline_add_24" android:id="@+id/floatingActionButton"-->
+<!--            android:layout_margin="20dp"-->
+<!--            android:onClick="toAddAssessment"-->
+<!--            tools:layout_editor_absoluteY="659dp"-->
+<!--            tools:layout_editor_absoluteX="339dp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintRight_toRightOf="parent"-->
+<!--    />-->
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/assessments_recycler"
             android:layout_width="409dp"
@@ -26,4 +26,14 @@
             tools:layout_editor_absoluteX="1dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+    <Button
+            android:text="Add Assessment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/addAssessment"
+            android:onClick="toAddAssessment"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
