--- a/app/src/main/res/layout/activity_assesments_details.xml
+++ b/app/src/main/res/layout/activity_assesments_details.xml
@@ -77,19 +77,17 @@
                         android:hint="String">
                 </EditText>
             </LinearLayout>
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                <Button
-                        android:id="@+id/saveBtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="80dp"
-                        android:clickable="true"
-                        android:onClick="saveBtn"
-                        android:text="Save"/>
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
+    <Button
+            android:id="@+id/saveBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:onClick="saveBtn"
+            android:text="Save"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
