--- a/app/src/main/res/layout/activity_courses_details.xml
+++ b/app/src/main/res/layout/activity_courses_details.xml
@@ -38,6 +38,21 @@
                     android:orientation="horizontal">
                 <TextView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
+                          android:text="Course ID:">
+                </TextView>
+                <EditText
+                        android:id="@+id/editCourseId"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="Int">
+                </EditText>
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
                           android:text="Course Title:">
                 </TextView>
                 <EditText
@@ -157,6 +172,27 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                 <TextView
+                        android:id="@+id/text_course_notes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Notes:"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/course_notes_recycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="18dp"
+                        android:layout_marginStart="12dp"
+                        android:layout_marginTop="16dp"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                <TextView
                         android:id="@+id/text_course_assessments"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -168,8 +204,8 @@
                     android:orientation="horizontal">
                 <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/course_assessments_recycler"
-                        android:layout_width="414dp"
-                        android:layout_height="100dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="82dp"
                         android:layout_marginStart="12dp"
                         android:layout_marginTop="16dp"/>
             </LinearLayout>
@@ -177,14 +213,25 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-                <Button
-                        android:id="@+id/saveBtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:clickable="true"
-                        android:onClick="saveBtn"
-                        android:text="Save"/>
+<!--                <Button-->
+<!--                        android:id="@+id/notesBtn"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:clickable="true"-->
+<!--                        android:onClick="notesBtn"-->
+<!--                        android:text="Notes"/>-->
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+    <Button
+            android:id="@+id/saveBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:onClick="saveBtn"
+            android:text="Save"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
