--- a/app/src/main/res/layout/activity_terms_details.xml
+++ b/app/src/main/res/layout/activity_terms_details.xml
@@ -8,12 +8,12 @@
         tools:context=".CoursesDetails">
     <ScrollView
             android:layout_width="407dp"
-            android:layout_height="722dp"
+            android:layout_height="600dp"
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-    >
+            android:id="@+id/scrollView2">
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">
@@ -100,19 +100,24 @@
                         android:layout_marginStart="12dp"
                         android:layout_marginTop="16dp"/>
             </LinearLayout>
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                <Button
-                        android:id="@+id/saveBtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="80dp"
-                        android:clickable="true"
-                        android:onClick="saveBtn"
-                        android:text="Save"/>
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
+    <!--    <LinearLayout-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:orientation="horizontal" tools:layout_editor_absoluteY="32dp">-->
+    <Button
+            android:id="@+id/saveBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:onClick="saveBtn"
+            android:text="Save"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"/>
+    <!--    </LinearLayout>-->
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
