--- a/app/src/main/res/layout/assessment_list_item.xml
+++ b/app/src/main/res/layout/assessment_list_item.xml
@@ -3,7 +3,9 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto">
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   android:layout_marginTop="10dp"
+                                                   android:layout_marginStart="10dp">
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
