--- a/app/src/main/res/layout/course_list_item.xml
+++ b/app/src/main/res/layout/course_list_item.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:tools="http://schemas.android.com/tools"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto">
+                                                   android:layout_marginTop="10dp"
+                                                   android:layout_marginStart="10dp">
 
     <TextView
             android:text="TextView"
@@ -11,9 +13,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView"
             android:background="@color/purple_200"
-            tools:layout_editor_absoluteY="20dp"
-            tools:layout_editor_absoluteX="19dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-          />
+            android:layout_marginTop="10dp" android:layout_marginLeft="10dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
