--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -10,9 +10,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView"
             android:background="@color/purple_200"
-            tools:layout_editor_absoluteY="20dp"
-            tools:layout_editor_absoluteX="19dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-    />
+            app:layout_constraintLeft_toLeftOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
