Sharing and alerts.

--- a/app/src/main/res/layout/activity_notes_details.xml
+++ b/app/src/main/res/layout/activity_notes_details.xml
@@ -12,8 +12,7 @@
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/scrollView3">
+            app:layout_constraintTop_toTopOf="parent">
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">
@@ -93,14 +92,5 @@
             android:id="@+id/deleteBtn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    <Button
-            android:onClick="shareBtn"
-            android:text="Share"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/shareBtn"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="26dp"
-            android:layout_marginBottom="18dp"
             app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
