--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,38 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-    <Button
-            android:text="Terms"
-            android:layout_width="160dp"
-            android:layout_height="80dp" android:id="@+id/btnTerms"
-            android:onClick="toTerms" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="162dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="122dp"/>
-    <Button
-            android:text="Courses"
-            android:layout_width="160dp"
-            android:layout_height="80dp" android:id="@+id/btnCourses"
-            android:onClick="toCourses" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="317dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="122dp"/>
-    <Button
-            android:text="Assessments"
-            android:layout_width="160dp"
-            android:layout_height="80dp" android:id="@+id/btnAssessments"
-            android:onClick="toAssessments" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="480dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="122dp"/>
+    <ScrollView
+            android:layout_width="407dp"
+            android:layout_height="722dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="1dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="vertical">
+            <Button
+                    android:text="Terms"
+                    android:layout_width="wrap_content"
+                    android:layout_height="80dp" android:id="@+id/btnTerms"
+                    android:onClick="toTerms" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+            />
+            <Button
+                    android:text="Courses"
+                    android:layout_width="wrap_content"
+                    android:layout_height="80dp" android:id="@+id/btnCourses"
+                    android:onClick="toCourses" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+            />
+            <Button
+                    android:text="Assessments"
+                    android:layout_width="wrap_content"
+                    android:layout_height="80dp" android:id="@+id/btnAssessments"
+                    android:onClick="toAssessments" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+            />
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
